fix slider white space

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -336,6 +336,15 @@
         }
     }
 }
+.mfp-content{
+	#rtmedia-single-media-container{
+		form{
+			text-align: center;
+			background-color: #333;
+		}
+	}
+}
+
 
 #rtmedia-action-update{
 	float: left;
